--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -9,9 +9,18 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding-top: 75px;
+	flex-direction: column;
+	padding-top: 100px;
 }
-
+.category-description {
+	display: flex;
+	margin: 25px 0;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	padding: 0 100px;
+}
 .review-card {
 	width: 90%;
 	display: flex;
