--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -3,15 +3,18 @@
 	margin-top: 50px;
 	background-color: rgb(14, 126, 136);
 	width: 100vw;
-	height: 30px;
+	height: 40px;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	padding: 0 50px;
 }
 .category-select {
 	background-color: rgb(14, 126, 136);
 	color: whitesmoke;
 	border: none;
+	height: 30px;
+	font-size: 1.2rem;
 }
 
 .category-select:active {
