--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -1,7 +1,7 @@
-.container{
+.loading-container{
     width: 100vw;
     height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
