--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -1,53 +1,57 @@
-.review-heading{
-    padding-top: 100px;
-    padding-bottom: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.review-heading {
+	padding-top: 100px;
+	padding-bottom: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.review-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.review-title {
+	width: 60%;
+	text-align: center;
 }
-.review-img{
-    width: 70%;
-    margin: 30px;
+.review-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-.review-info-container{
-    display: flex;
-    width: 70%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 30px;
+.review-img {
+	width: 70%;
+	margin: 30px;
 }
-.review-category{
-    background-color: rgb(14, 126, 136);
-    border-radius: 5px;
-    color: whitesmoke;
-    font-size: 1.2rem;
-    padding: 10px 20px;
-    margin-bottom: 20px;
+.review-info-container {
+	display: flex;
+	width: 70%;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	padding: 30px;
 }
-.review-designer{
-    margin-bottom: 20px;
-    text-align: center;
+.review-category {
+	background-color: rgb(14, 126, 136);
+	border-radius: 5px;
+	color: whitesmoke;
+	font-size: 1.2rem;
+	padding: 10px 20px;
+	margin-bottom: 20px;
+}
+.review-designer {
+	margin-bottom: 20px;
+	text-align: center;
 }
 
-.review-author{
-    margin-bottom: 20px;
-    text-align: center;
+.review-author {
+	margin-bottom: 20px;
+	text-align: center;
 }
 
-.review-body{
-    margin-bottom: 20px;
-    text-align: justify;
+.review-body {
+	margin-bottom: 20px;
+	text-align: justify;
 }
-.vote-btns{
-    margin-bottom: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 30%;
+.vote-btns {
+	margin-bottom: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 30%;
 }
