--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -1,30 +1,32 @@
-.comments-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+.comments-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
 }
-.comment-card{
-    width: 90%;
-    margin: 20px 0;
-    display: flex;
-    background-color: whitesmoke;
-    border-radius: 5px;
-    padding: 20px;
+.comment-card {
+	width: 90%;
+	max-width: 600px;
+	margin: 20px 0;
+	display: flex;
+	background-color: whitesmoke;
+	border-radius: 5px;
+	padding: 20px;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.comment-card-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+.comment-card-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
-.comment-card-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: justify;
-    margin-left: 20px;
+.comment-card-main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: justify;
+	margin-left: 20px;
 }
